# sphinx-backend

./: .clang-format  .ctags  .gitmodules  .localvimrc  CMakeLists.txt  sphinx.imp
data/: sphinx.json
docs/: Doxyfile.in  db.pgsql  db.sql
docs/rest_api/: sphinx-rest.raml
docs/rest_api/samples/: create_courses.json  create_user.json  create_user_invalid_field.json  create_user_malformed.json  create_users.json  create_users_malformed.json  user.json
docs/rest_api/schema/: user.json
scripts/: sqlite_ddl2cpp
src/backend/: Application.cpp  Application.h  BackendApp.cpp  BackendApp.h  CMakeLists.txt  application.cpp  application.h  backend_app.cpp  backend_app.h  dao.cpp  dao.h  http_status_code.cpp  http_status_code.h  main.cpp  rest_helper.cpp  rest_helper.h  sphinx_backend.cpp
src/backend/db/: backend_db.cpp  backend_db.h  dao.cpp  dao.h  data.cpp  data.h  db.cpp  db.h  db_utils.cpp  db_utils.h  json_serializer.cpp  json_serializer.h  model.cpp  model.h  model_relations.h  model_utils.cpp  model_utils.h  pq.h  row_to_data.cpp  row_to_data.h  tables.cpp  tables.h
src/backend/json/: json_serializer.h
src/backend/model/: model.h  model_relations.cpp  model_relations.h
src/backend_test/: CMakeLists.txt  backend_test.cpp  user_api.cpp
src/db/: CMakeLists.txt  db.cpp  db.h  db_connection.cpp  db_connection.h  db_utils.cpp  db_utils.h  model_column.cpp  model_column.h  model_column_traits.cpp  model_column_traits.h  model_expr.cpp  model_expr.h  model_meta.cpp  model_meta.h  model_relations.h
src/shared_lib/: json_diag.hpp
